Fix diseases creation

--- a/app/views/diseases/index.haml
+++ b/app/views/diseases/index.haml
@@ -2,7 +2,7 @@
 
 .row
   .col-md-12.text-right
-    = link_to t('diseases.button.new'), new_medicine_path, class: "btn btn-success"
+    = link_to t('diseases.button.new'), new_disease_path, class: "btn btn-success"
 
 .row
   .col-md-12
