Add audiometry certificate

--- a/app/views/consultations/_modal_certificates.haml
+++ b/app/views/consultations/_modal_certificates.haml
@@ -18,15 +18,16 @@
             .col-md-6
               %select.form-control.input-sm#certificate
                 %option{ value: "attendance" } Asistencia
+                %option{ value: "audiometry" } Audiometría
                 %option{ value: "surgery" } Cirugía
                 %option{ value: "consultation" } Consulta
                 %option{ value: "specialty" } Especialidad ORL
                 %option{ value: "fracture" } Fractura de huesos propios nasales
                 %option{ value: "audiological" } Informe audiológico
-                %option{ value: "rest" } Reposo médico
-                %option{ value: "simple" } Simple
                 %option{ value: "oea" } OEA
                 %option{ value: "protocol" } Protocolo y epicrisis
+                %option{ value: "rest" } Reposo médico
+                %option{ value: "simple" } Simple
               %em.text-muted Selecciona un certificado
           .attendance-controls{ style: "display:none" }
             .form-group
