--- a/app/views/consultations/_modal_certificates.haml
+++ b/app/views/consultations/_modal_certificates.haml
@@ -21,6 +21,7 @@
                 %option{ value: "audiometry" } Audiometría
                 %option{ value: "surgery" } Cirugía
                 %option{ value: "consultation" } Consulta
+                %option{ value: "consent" } Consentimiento
                 %option{ value: "specialty" } Especialidad ORL
                 %option{ value: "fracture" } Fractura de huesos propios nasales
                 %option{ value: "audiological" } Informe audiológico
