Add strange body certificate

--- a/app/views/consultations/_modal_certificates.haml
+++ b/app/views/consultations/_modal_certificates.haml
@@ -22,6 +22,7 @@
                 %option{ value: "surgery" } Cirugía
                 %option{ value: "consultation" } Consulta
                 %option{ value: "consent" } Consentimiento
+                %option{ value: "strange_body" } Cuerpo extraño
                 %option{ value: "specialty" } Especialidad ORL
                 %option{ value: "fracture" } Fractura de huesos propios nasales
                 %option{ value: "audiological" } Informe audiológico
@@ -30,7 +31,7 @@
                 %option{ value: "rest" } Reposo médico
                 %option{ value: "simple" } Simple
               %em.text-muted Selecciona un certificado
-          .attendance-controls{ style: "display:none" }
+          .time-controls{ style: "display:none" }
             .form-group
               %label.col-sm-2.control-label{ for: "certificate_start_time" } Inicio
               .col-md-6
