Add epistaxis certificate

--- a/app/views/consultations/_modal_certificates.haml
+++ b/app/views/consultations/_modal_certificates.haml
@@ -24,6 +24,7 @@
                 %option{ value: "consent" } Consentimiento
                 %option{ value: "strange_body" } Cuerpo extraño
                 %option{ value: "specialty" } Especialidad ORL
+                %option{ value: "epistaxis" } Epistaxis
                 %option{ value: "fracture" } Fractura de huesos propios nasales
                 %option{ value: "audiological" } Informe audiológico
                 %option{ value: "oea" } OEA
