Add fever certificate

--- a/app/views/consultations/_modal_certificates.haml
+++ b/app/views/consultations/_modal_certificates.haml
@@ -25,6 +25,7 @@
                 %option{ value: "strange_body" } Cuerpo extraño
                 %option{ value: "specialty" } Especialidad ORL
                 %option{ value: "epistaxis" } Epistaxis
+                %option{ value: "fever" } Fiebre en Estudio
                 %option{ value: "fracture" } Fractura de huesos propios nasales
                 %option{ value: "audiological" } Informe audiológico
                 %option{ value: "oea" } OEA
