Add FFAA certificate

--- a/app/views/consultations/_modal_certificates.haml
+++ b/app/views/consultations/_modal_certificates.haml
@@ -27,6 +27,7 @@
                 %option{ value: "epistaxis" } Epistaxis
                 %option{ value: "fever" } Fiebre en Estudio
                 %option{ value: "fracture" } Fractura de huesos propios nasales
+                %option{ value: "ffaa" } Fuerzas Armadas
                 %option{ value: "audiological" } Informe audiológico
                 %option{ value: "oea" } OEA
                 %option{ value: "protocol" } Protocolo y epicrisis
