--- a/app/views/consultations/_modal_certificates.haml
+++ b/app/views/consultations/_modal_certificates.haml
@@ -29,6 +29,8 @@
                 %option{ value: "fracture" } Fractura de huesos propios nasales
                 %option{ value: "ffaa" } Fuerzas Armadas
                 %option{ value: "audiological" } Informe audiológico
+                %option{ value: "school_orl" } Informe escolar ORL y audición
+                %option{ value: "consent_intratympanic" } Intratimpánica
                 %option{ value: "oea" } OEA
                 %option{ value: "protocol" } Protocolo y epicrisis
                 %option{ value: "rest" } Reposo médico
