Add RX SPN certificate

--- a/app/views/consultations/_modal_certificates.haml
+++ b/app/views/consultations/_modal_certificates.haml
@@ -32,7 +32,9 @@
                 %option{ value: "school_orl" } Informe escolar ORL y audición
                 %option{ value: "consent_intratympanic" } Intratimpánica
                 %option{ value: "oea" } OEA
+                %option{ value: "nasoseptal" } Post CX trauma nasoseptal
                 %option{ value: "protocol" } Protocolo y epicrisis
+                %option{ value: "rx_spn" } RX SPN
                 %option{ value: "rest" } Reposo médico
                 %option{ value: "simple" } Simple
               %em.text-muted Selecciona un certificado
