Add vertiginous syndrome certificate

--- a/app/views/consultations/_modal_certificates.haml
+++ b/app/views/consultations/_modal_certificates.haml
@@ -37,6 +37,7 @@
                 %option{ value: "rx_spn" } RX SPN
                 %option{ value: "rest" } Reposo médico
                 %option{ value: "simple" } Simple
+                %option{ value: "vertiginous_syndrome" } Síndrome vertiginoso
               %em.text-muted Selecciona un certificado
           .time-controls{ style: "display:none" }
             .form-group
