Add nasal fracture reduction certificate

--- a/app/views/consultations/_modal_certificates.haml
+++ b/app/views/consultations/_modal_certificates.haml
@@ -33,6 +33,7 @@
                 %option{ value: "nasoseptal" } Post CX trauma nasoseptal
                 %option{ value: "proforma" } Proforma
                 %option{ value: "protocol" } Protocolo y epicrisis
+                %option{ value: "nasal_fracture_reduction" } Reducción nasal
                 %option{ value: "rx_spn" } RX SPN
                 %option{ value: "rest" } Reposo médico
                 %option{ value: "simple" } Simple
