Add oxygen saturation to consultations

--- a/app/views/consultations/_form.haml
+++ b/app/views/consultations/_form.haml
@@ -65,6 +65,12 @@
             %span.input-group-addon.input-sm Talla
             = f.text_field :height, class: "form-control input-sm"
             %span.input-group-addon.input-sm cm
+      .row-fluid
+        .form-group.col-md-4
+          .input-group
+            %span.input-group-addon.input-sm Sat. Oxígeno
+            = f.text_field :oxygen_saturation, class: "form-control input-sm"
+            %span.input-group-addon.input-sm %
 
   .panel.panel-danger
     .panel-heading
