--- a/app/views/consultations/_hint.haml
+++ b/app/views/consultations/_hint.haml
@@ -43,6 +43,17 @@
         .row
           .col-xs-1
             %span.text-muted
+              %i.fa.fa-download
+          .col-xs-10
+            - if @consultation.new_record?
+              %span.text-muted Descargar receta
+            - else
+              %span
+                =link_to t('prescriptions.button.download'), patient_consultation_prescription_path(@patient, @consultation), target: '_blank'
+
+        .row
+          .col-xs-1
+            %span.text-muted
               %i.fa.fa-certificate
           .col-xs-10
             - if @consultation.new_record?
