--- a/app/views/consultations/_form.haml
+++ b/app/views/consultations/_form.haml
@@ -157,6 +157,8 @@
                 %th.col-md-1 CIE
                 %th.col-md-1.text-center Presuntivo
                 %th.col-md-1.text-center Definitivo
+                %th.col-md-1.text-center
+                  %i.fa.fa-trash.clue
             %tbody
               = f.fields_for :diagnoses do |ff|
                 %tr
@@ -168,6 +170,8 @@
                     = ff.radio_button :type, "presuntive", class: "input-sm"
                   %td.text-center
                     = ff.radio_button :type, "definitive", class: "input-sm"
+                  %td.text-center
+                    = ff.check_box "_destroy", class: "input-sm destroy"
 
   .panel.panel-caution
     .panel-heading
@@ -195,24 +199,32 @@
               %tr
                 %th.col-md-6 Receta
                 %th.col-md-6 Indicaciones
+                %th.col-md-1.text-center
+                  %i.fa.fa-lock.clue
+                %th.col-md-1.text-center
+                  %i.fa.fa-trash.clue
             %tbody
               = f.fields_for :prescriptions do |ff|
                 %tr
                   %td
-                    = ff.text_field :inscription, class: "form-control input-sm inscription", autocomplete: "off"
+                    = ff.text_area :inscription, class: "form-control input-sm inscription", autocomplete: "off"
                   %td
-                    = ff.text_field :subscription, class: "form-control input-sm subscription"
+                    = ff.text_area :subscription, class: "form-control input-sm subscription"
+                  %td.text-center
+                    %input{ type: "checkbox", class: 'input-sm locked' }
+                  %td.text-center
+                    = ff.check_box "_destroy", class: "input-sm destroy"
       .row-fluid
         .form-group.col-md-12
           .input-group
             %span.input-group-addon.input-sm Señales de alarma
-            = f.text_field :warning_signs, class: "form-control input-sm"
+            = f.text_area :warning_signs, class: "form-control input-sm"
 
       .row-fluid
         .form-group.col-md-12
           .input-group
             %span.input-group-addon.input-sm Recomendaciones
-            = f.text_field :recommendations, class: "form-control input-sm"
+            = f.text_area :recommendations, class: "form-control input-sm"
 
   .panel.panel-advice
     .panel-heading
@@ -234,7 +246,7 @@
               = f.text_field :next_appointment, value: @consultation.next_appointment_date, class: "form-control input-sm"
 
   .row-fluid
-    = link_to "Cancelar", patient_consultations_path(@patient), class: "btn btn-default"
+    = link_to "Consultas", patient_consultations_path(@patient), class: "btn btn-default"
     = f.submit "Guardar", class: "btn btn-success"
 
 = render 'modal_consultation'
