--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -5,6 +5,7 @@
     %meta{name: 'viewport', content: 'width=device-width, initial-scale=1, user-scalable=no'}
     = favicon_link_tag 'favicon.ico'
     = javascript_include_tag 'application'
+    = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/pdfobject/2.2.3/pdfobject.min.js'
     = stylesheet_link_tag '//maxcdn.bootstrapcdn.com/bootswatch/3.3.7/paper/bootstrap.min.css'
     = stylesheet_link_tag '//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'
     = stylesheet_link_tag '//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker3.min.css'
