--- a/app/assets/stylesheets/hippocrates.css
+++ b/app/assets/stylesheets/hippocrates.css
@@ -266,6 +266,28 @@ input[type="email"] {
   padding-right: 7px;
 }
 
+.pdf__modal-lg {
+  width: 1100px;
+}
+
+.pdf-container {
+  padding: 5px 7px 0 7px;
+}
+
+.pdf__modal-header {
+  padding: 1px 7px 0 7px;
+}
+
+.pdf__close {
+  top: -15px;
+  position: absolute;
+  right: -15px;
+  background-color: #ffffff;
+  border-radius: 17px;
+  height: 30px;
+  width: 30px;
+}
+
 @media print {
   #printable-prescription {
     margin-top: 0;
