--- a/app/views/consultations/_form.haml
+++ b/app/views/consultations/_form.haml
@@ -3,6 +3,7 @@
 
 = error_messages_for @consultation
 %input{ type: "hidden", value: @consultation.id, id: "consultation_id" }
+
 = form_for [@patient, @consultation], html: { class: "form" } do |f|
   .panel.panel-info
     .panel-heading
@@ -251,5 +252,10 @@
 
 = render 'modal_consultation'
 = render 'modal_certificates'
+= render 'modal_prescription'
 = render 'prescription'
 = render 'hint'
+
+:javascript
+  var options = { height: "600px", pdfOpenParams: { view: "FitH" } };
+  PDFObject.embed("#{patient_consultation_prescription_path(@patient, @consultation)}", "#pdf", options);
