--- a/app/views/consultations/_form.haml
+++ b/app/views/consultations/_form.haml
@@ -28,7 +28,7 @@
     .panel-body
       .row-fluid
         .form-group.col-md-12
-          = f.text_area :organs_examination, class: "form-control input-sm"
+          = f.text_field :organs_examination, class: "form-control input-sm"
 
   .panel.panel-danger
     .panel-heading
@@ -192,7 +192,7 @@
         .form-group.col-md-12
           .input-group
             %span.input-group-addon.input-sm Procedimiento médico
-            = f.text_area :treatment_plan, class: "form-control input-sm"
+            = f.text_field :treatment_plan, class: "form-control input-sm"
       .row-fluid
         .form-group.col-md-12.prescriptions
           %table.table.table-striped.table-hover.table-condensed
@@ -208,9 +208,9 @@
               = f.fields_for :prescriptions do |ff|
                 %tr
                   %td
-                    = ff.text_area :inscription, class: "form-control input-sm inscription", autocomplete: "off"
+                    = ff.text_field :inscription, class: "form-control input-sm inscription", autocomplete: "off"
                   %td
-                    = ff.text_area :subscription, class: "form-control input-sm subscription"
+                    = ff.text_field :subscription, class: "form-control input-sm subscription"
                   %td.text-center
                     %input{ type: "checkbox", class: 'input-sm locked' }
                   %td.text-center
