--- a/app/views/patients/_form.haml
+++ b/app/views/patients/_form.haml
@@ -48,6 +48,16 @@
             = f.select :source, options_for_select([['Televisión', 'television'], ['Radio', 'radio'], ['Periódico', 'newspaper'], ['Otro paciente', 'patient_reference']], @patient.source), {}, class: "form-control input-sm"
 
       .row-fluid
+        .form-group.col-md-6
+          .input-group
+            %span.input-group-addon.input-sm Email
+            = f.text_field :email, class: "form-control input-sm"
+        .form-group.col-md-6
+          .input-group
+            %span.input-group-addon.input-sm Seguro médico
+            = f.text_field :health_insurance, class: "form-control input-sm"
+
+      .row-fluid
         .form-group.col-md-3
           .input-group
             %span.input-group-addon.input-sm Sexo
