Update email control

--- a/app/views/application/_patient.haml
+++ b/app/views/application/_patient.haml
@@ -52,7 +52,7 @@
         .form-group.col-md-6
           .input-group
             %span.input-group-addon.input-sm Email
-            %input.form-control.input-sm.colored{ disabled: 'disabled', value: @patient.email }
+            %input.form-control.input-sm.colored{ type: 'email', disabled: 'disabled', value: @patient.email }
         .form-group.col-md-6
           .input-group
             %span.input-group-addon.input-sm Seguro médico
