--- a/app/views/patients/_form.haml
+++ b/app/views/patients/_form.haml
@@ -51,7 +51,7 @@
         .form-group.col-md-6
           .input-group
             %span.input-group-addon.input-sm Email
-            = f.text_field :email, class: "form-control input-sm"
+            = f.email_field :email, class: "form-control input-sm"
         .form-group.col-md-6
           .input-group
             %span.input-group-addon.input-sm Seguro médico
