--- a/app/assets/stylesheets/hippocrates.css
+++ b/app/assets/stylesheets/hippocrates.css
@@ -27,6 +27,10 @@ input[type="email"] {
   color: #FFF;
 }
 
+.document-preview {
+  max-width: 100%;
+}
+
 .hint-title > .text-muted {
   color: #999;
 }
