Add new certificates

--- a/app/views/consultations/_modal_certificates.haml
+++ b/app/views/consultations/_modal_certificates.haml
@@ -19,13 +19,16 @@
               %select.form-control.input-sm#certificate
                 %option{ value: "attendance" } Asistencia
                 %option{ value: "audiometry" } Audiometría
+                %option{ value: "surgery" } Cirugía
                 %option{ value: "consent" } Consentimiento
                 %option{ value: "strange_body" } Cuerpo extraño
                 %option{ value: "specialty" } Especialidad ORL
                 %option{ value: "epistaxis" } Epistaxis
                 %option{ value: "fracture" } Fractura de huesos propios nasales
                 %option{ value: "ffaa" } Fuerzas Armadas
+                %option{ value: "nasophibroscopy" } Nasofibroscopía
                 %option{ value: "audiological" } Informe audiológico
+                %option{ value: "laryngoscopy" } Informe de laringoscopía
                 %option{ value: "consent_intratympanic" } Intratimpánica
                 %option{ value: "oea" } OEA
                 %option{ value: "proforma" } Proforma
