--- a/app/views/consultations/_modal_certificates.haml
+++ b/app/views/consultations/_modal_certificates.haml
@@ -19,23 +19,22 @@
               %select.form-control.input-sm#certificate
                 %option{ value: "attendance" } Asistencia
                 %option{ value: "audiometry" } Audiometría
+                %option{ value: "surgery" } Cirugía
                 %option{ value: "consent" } Consentimiento
                 %option{ value: "strange_body" } Cuerpo extraño
                 %option{ value: "specialty" } Especialidad ORL
                 %option{ value: "epistaxis" } Epistaxis
-                %option{ value: "fever" } Fiebre en Estudio
                 %option{ value: "fracture" } Fractura de huesos propios nasales
                 %option{ value: "ffaa" } Fuerzas Armadas
+                %option{ value: "nasophibroscopy" } Nasofibroscopía
                 %option{ value: "audiological" } Informe audiológico
-                %option{ value: "school_orl" } Informe escolar ORL y audición
+                %option{ value: "laryngoscopy" } Informe de laringoscopía
                 %option{ value: "consent_intratympanic" } Intratimpánica
                 %option{ value: "oea" } OEA
-                %option{ value: "nasoseptal" } Post CX trauma nasoseptal
                 %option{ value: "proforma" } Proforma
                 %option{ value: "protocol" } Protocolo y epicrisis
-                %option{ value: "nasal_fracture_reduction" } Reducción nasal
+                %option{ value: "rest" } Reposo
                 %option{ value: "rx_spn" } RX SPN
-                %option{ value: "rest" } Reposo médico
                 %option{ value: "simple" } Simple
                 %option{ value: "vertiginous_syndrome" } Síndrome vertiginoso
               %em.text-muted Selecciona un certificado
