--- a/app/views/consultations/_form.haml
+++ b/app/views/consultations/_form.haml
@@ -5,6 +5,8 @@
 %input{ type: "hidden", value: @consultation.id, id: "consultation_id" }
 
 = form_for [@patient, @consultation], html: { class: "form" } do |f|
+  = render partial: 'patient', locals: { form: f }
+
   .panel.panel-info
     .panel-heading
       %b Motivo de Consulta
@@ -12,6 +14,7 @@
       .row-fluid
         .form-group.col-md-12
           = f.text_area :reason, class: "form-control input-sm"
+
   = render 'anamnesis'
 
   .panel.panel-info
