Add consultations navigation button

--- a/app/views/documents/index.haml
+++ b/app/views/documents/index.haml
@@ -61,3 +61,4 @@
     = paginate @documents
 
 = link_to "Consulta", edit_patient_consultation_path(@patient, @consultation), class: "btn btn-default"
+= link_to "Consultas", patient_consultations_path(@patient), class: "btn btn-default"
